2019-05-17  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	New customizable variable mime-image-normalize-xbm is introduced.
	When it is nil, xbm image is not normalized but scalable.

	* mime-image.el (mime-image-normalize-xbm): New customizable
	variable.
	(mime-image-max-height, mime-image-max-width): Update docstring to
	refer to mime-image-normalize-xbm.
	(mime-image-create): Do not normalize xbm image when
	mime-image-normalize-xbm is nil.

2019-05-16  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Native image scaling support.

	* mime-image.el (mime-image-max-height, mime-image-max-width):
	Update docstring.
	(mime-image-create): Use image scaling if available.

2019-04-04  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-tnef.el (mime-tnef-parse): Fix the case input STRING is too
	short.

2019-03-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-tnef.el (mime-tnef-decode-string)
	(mime-tnef-decode-unicode-string): Minor refactoring.

2019-03-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Fix the case winmail.dat contains text file.
	mime-edit-insert-file-parameters requires a existing file to
	decide charset value.  By this fix, caller decides charset.

	* mime-tnef.el (mime-tnef-insert-file-parameters): New function.
	(mime-tnef-insert-file): Use it.

2018-08-25  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Displaying resized image is supported.  Emacs 24.4 or later with
	built-in imagemagick is required.
	* mime-image.el (mime-image-max-height, mime-image-max-width): New
	variables.
	(mime-image-create): Use them.

2018-02-11  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-view-multipart-descendant-button)
	(mime-display-multipart/alternative): pass situation as
	DEFAULT-SITUATION to mime-display-entity function.

2018-02-10  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Show entity's button after header when content type is message and
	child entity is not text nor multipart.

	* mime-view.el (mime-view-entity-title): prefer filename to
	Subject field.